Fixed the responsive layout, and switched the portrait photo and cutouts to <img> to make them align to the bottom right properly and not show up weird on mobile. Also fixed some sizing in the tablet layout.

--- a/css/main.css
+++ b/css/main.css
@@ -59,75 +59,50 @@ body {
 
 .portrait-photo {
     position: absolute;
-    height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
     z-index: 5;
-    background-image: url("../assets/portrait-quarter.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom right;
     animation: scale-in 3s ease-in-out backwards;
     animation-delay: 1s;
 }
 
 .portrait-cutout-1 {
     position: absolute;
-    height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
     z-index: 4;
-    background-image: url("../assets/cutout-1-quarter.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom right;
     animation: scale-in 3s ease-in-out backwards;
     animation-delay: 1.5s;
 }
 
 .portrait-cutout-2 {
     position: absolute;
-    height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
     z-index: 3;
-    background-image: url("../assets/cutout-2-quarter.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom right;
     animation: scale-in 3s ease-in-out backwards;
     animation-delay: 2s;
 }
 
 .portrait-cutout-3 {
     position: absolute;
-    height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
     z-index: 2;
-    background-image: url("../assets/cutout-3-quarter.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom right;
     animation: scale-in 3s ease-in-out backwards;
     animation-delay: 2.5s;
 }
 
 .portrait-cutout-4 {
     position: absolute;
-    height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
     z-index: 1;
-    background-image: url("../assets/cutout-4-quarter.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom right;
     animation: scale-in 3s ease-in-out backwards;
     animation-delay: 3s;
 }
@@ -142,6 +117,66 @@ body {
         margin: 0;
         padding: 0;
     }
+
+    .portrait-photo {
+        position: absolute;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 5;
+        animation: scale-in 3s ease-in-out backwards;
+        animation-delay: 1s;
+    }
+
+    .portrait-cutout-1 {
+        position: absolute;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 4;
+        animation: scale-in 3s ease-in-out backwards;
+        animation-delay: 1.5s;
+    }
+
+    .portrait-cutout-2 {
+        position: absolute;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 3;
+        animation: scale-in 3s ease-in-out backwards;
+        animation-delay: 2s;
+    }
+
+    .portrait-cutout-3 {
+        position: absolute;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 2;
+        animation: scale-in 3s ease-in-out backwards;
+        animation-delay: 2.5s;
+    }
+
+    .portrait-cutout-4 {
+        position: absolute;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 1;
+        animation: scale-in 3s ease-in-out backwards;
+        animation-delay: 3s;
+    }
 }
 
 @media (min-width: 1080px) {
@@ -149,10 +184,6 @@ body {
         position: absolute;
         height: 100%;
         width: 60%;
-        bottom: 0;
-        right: 0;
-        margin: 0;
-        padding: 0;
     }
 }
 
@@ -183,19 +214,19 @@ body {
         width: 100%;
         height: 100%;
         margin: 0;
-        padding: 1rem;
+        padding: 0;
     }
 
     .hero-text img{
         width: 80%;
-        max-height: 50vh;
+        max-height: 60vh;
         object-fit: contain;
         margin: 0;
         padding: 0 10%;
     }
 
     .hero-text iframe{
-        width: 40%;
+        width: 60%;
         aspect-ratio: 16/9;
         margin: 0;
         padding: 1rem;
